# src/app/api/services/authors.service.ts
@@ -157,99 +157,6 @@ export class AuthorsService extends BaseService {
   }
 
   /**
-   * Path part for operation authorsPublicationIdGet
-   */
-  static readonly AuthorsPublicationIdGetPath = '/Authors/{publicationId}';
-
-  /**
-   * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `authorsPublicationIdGet$Plain()` instead.
-   *
-   * This method doesn't expect any request body.
-   */
-  authorsPublicationIdGet$Plain$Response(params: {
-    publicationId: number;
-
-  }): Observable<StrictHttpResponse<Array<AuthorBriefDto>>> {
-
-    const rb = new RequestBuilder(this.rootUrl, AuthorsService.AuthorsPublicationIdGetPath, 'get');
-    if (params) {
-
-      rb.path('publicationId', params.publicationId, {});
-
-    }
-    return this.http.request(rb.build({
-      responseType: 'text',
-      accept: 'text/plain'
-    })).pipe(
-      filter((r: any) => r instanceof HttpResponse),
-      map((r: HttpResponse<any>) => {
-        return r as StrictHttpResponse<Array<AuthorBriefDto>>;
-      })
-    );
-  }
-
-  /**
-   * This method provides access to only to the response body.
-   * To access the full response (for headers, for example), `authorsPublicationIdGet$Plain$Response()` instead.
-   *
-   * This method doesn't expect any request body.
-   */
-  authorsPublicationIdGet$Plain(params: {
-    publicationId: number;
-
-  }): Observable<Array<AuthorBriefDto>> {
-
-    return this.authorsPublicationIdGet$Plain$Response(params).pipe(
-      map((r: StrictHttpResponse<Array<AuthorBriefDto>>) => r.body as Array<AuthorBriefDto>)
-    );
-  }
-
-  /**
-   * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `authorsPublicationIdGet$Json()` instead.
-   *
-   * This method doesn't expect any request body.
-   */
-  authorsPublicationIdGet$Json$Response(params: {
-    publicationId: number;
-
-  }): Observable<StrictHttpResponse<Array<AuthorBriefDto>>> {
-
-    const rb = new RequestBuilder(this.rootUrl, AuthorsService.AuthorsPublicationIdGetPath, 'get');
-    if (params) {
-
-      rb.path('publicationId', params.publicationId, {});
-
-    }
-    return this.http.request(rb.build({
-      responseType: 'json',
-      accept: 'text/json'
-    })).pipe(
-      filter((r: any) => r instanceof HttpResponse),
-      map((r: HttpResponse<any>) => {
-        return r as StrictHttpResponse<Array<AuthorBriefDto>>;
-      })
-    );
-  }
-
-  /**
-   * This method provides access to only to the response body.
-   * To access the full response (for headers, for example), `authorsPublicationIdGet$Json$Response()` instead.
-   *
-   * This method doesn't expect any request body.
-   */
-  authorsPublicationIdGet$Json(params: {
-    publicationId: number;
-
-  }): Observable<Array<AuthorBriefDto>> {
-
-    return this.authorsPublicationIdGet$Json$Response(params).pipe(
-      map((r: StrictHttpResponse<Array<AuthorBriefDto>>) => r.body as Array<AuthorBriefDto>)
-    );
-  }
-
-  /**
    * Path part for operation authorsIdGet
    */
   static readonly AuthorsIdGetPath = '/Authors/{id}';
